--- a/node_csv_uploader/node_csv_uploader.links.tasks.yml
+++ b/node_csv_uploader/node_csv_uploader.links.tasks.yml
@@ -1,4 +1,4 @@
 node_csv_uploader.admin:
-  title: 'Node CSVs'
+  title: 'Import stocklist'
   route_name: node_csv_uploader.admin
   base_route: system.admin_content
